kubernetes/api-gateway.yaml
# Deployment

apiVersion: apps/v1
kind: Deployment 
metadata:
  name: api-gateway
  namespace: default 
  labels:
    app: api-gateway 
spec: 
  replicas: 1 
  selector: 
    matchLabels:
      app: api-gateway
  template: 
    metadata: 
      labels: 
        app: api-gateway
    spec:
      containers: 
        - name: api-gateway-container
          image: <YOUR_DOCKER_USERNAME>/mytodo-gateway:latest
          ports:
            - containerPort: 9000
---

# Service

apiVersion: v1 
kind: Service 
metadata: 
  name: api-gateway 
  namespace: default 
spec: 
  selector:
    app: api-gateway
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 9000
  type: ClusterIP
