kubernetes/auth-service.yaml
# Deployment

apiVersion: apps/v1
kind: Deployment 
metadata:
  name: auth-service
  namespace: default 
  labels:
    app: auth-service 
spec: 
  replicas: 1 
  selector: 
    matchLabels:
      app: auth-service
  template: 
    metadata: 
      labels: 
        app: auth-service
    spec:
      containers: 
        - name: auth-service-container
          image: dharshib/mytodo-auth:v1
          ports:
            - containerPort: 9002
---

# Service

apiVersion: v1 
kind: Service 
metadata: 
  name: auth-service 
  namespace: default 
spec: 
  selector:
    app: auth-service
  ports:
    - protocol: TCP
      port: 9002
      targetPort: 9002
  type: ClusterIP
